--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/
+google_scholar: https://scholar.google.com/citations?user=UTy2DRoAAAAJ&hl=en
 cv_link: assets/files/curriculum_vitae.pdf
 github_link: https://github.com/chuyuanli
 linkedin: https://www.linkedin.com/in/chuyuan-li-nlp/
@@ -20,7 +20,7 @@ twitter: https://x.com/ChuyuanLi
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/li.jpg
+avatar: ./assets/img/li2.jpg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 
