--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -4,7 +4,7 @@ main:
     # authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
     authors: <strong>Chuyuan Li</strong>, Austin Xu, Shafiq Joty, Giuseppe Carenini
     conference_short: Findings EMNLP
-    conference: Findings of the Association for Computational Linguistics <strong>(Findings EMNLP)</strong>, 2025.
+    conference: Findings of the Empirical Methods in Natural Language Processing <strong>(Findings EMNLP)</strong>, 2025.
     pdf: https://arxiv.org/pdf/2509.09852
     code: https://github.com/chuyuanli/TopicRL-for-MDS
     # bibtex: https://arxiv.org/abs/2509.09852
@@ -28,7 +28,7 @@ main:
     conference: Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics <strong>(ACL)</strong>, 2025.
     pdf: https://aclanthology.org/2025.acl-long.1253.pdf
     code: https://github.com/chuyuanli/Delta-KNN
-    page: https://aclanthology.org/2025.acl-long.1253/
+    # page: https://aclanthology.org/2025.acl-long.1253/
     # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     # notes: Oral Presentation
     image: ./assets/img/paper/25acl-deltaKNN.png
@@ -39,7 +39,40 @@ main:
     conference: Findings of the Association for Computational Linguistics <strong>(Findings ACL)</strong>, 2025.
     pdf: https://aclanthology.org/2025.findings-acl.1123.pdf
     # code: https://github.com/chuyuanli/Delta-KNN
-    page: https://aclanthology.org/2025.findings-acl.1123
+    # page: https://aclanthology.org/2025.findings-acl.1123
     # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     # notes: Oral Presentation
     image: ./assets/img/paper/25acl-explicit-bayesian.png
+
+  - title: "On Large Foundation Models and Alzheimer's Disease Detection"
+    authors: <strong>Chuyuan Li</strong>, Giuseppe Carenini, Thalia S. Field
+    conference_short: ML4Health
+    conference: Proceedings of the Second Workshop on Patient-Oriented Language Processing (<strong>CL4Health</strong>), NAACL, 2025.
+    pdf: https://aclanthology.org/2025.cl4health-1.13/
+    # code: https://github.com/chuyuanli/Delta-KNN
+    # page: https://aclanthology.org/2025.acl-long.1253/
+    # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
+    # notes: Oral Presentation
+    image: ./assets/img/paper/25cl4health.png
+
+  - title: "Dialogue Discourse Parsing as Generation: a Sequence-to-Sequence LLM-based Approach"
+    authors: <strong>Chuyuan Li</strong>, Yuwei Yin, and Giuseppe Carenini
+    conference_short: SIGdial
+    conference: Proceedings of the 25th Annual Meeting of the Special Interest Group on Discourse and Dialogue (<strong>SIGdial</strong>), 2024.
+    pdf: https://aclanthology.org/2024.sigdial-1.1/
+    code: https://github.com/chuyuanli/Seq2Seq-DDP
+    # page: https://aclanthology.org/2025.acl-long.1253/
+    # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
+    notes: Best Paper Award
+    image: ./assets/img/paper/25sigdial-seq2seq-ddp.png
+
+  - title: "Coherence-based Dialogue Discourse Structure Extraction using Open-Source Large Language Models"
+    authors: Gaetano Cimino, <strong>Chuyuan Li</strong>, Giuseppe Carenini, and Vincenzo Deufemia
+    conference_short: SIGdial
+    conference: Proceedings of the 25th Annual Meeting of the Special Interest Group on Discourse and Dialogue (<strong>SIGdial</strong>), 2024.
+    pdf: https://aclanthology.org/2024.sigdial-1.26/
+    # code: https://github.com/chuyuanli/Delta-KNN
+    # page: https://aclanthology.org/2025.acl-long.1253/
+    # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
+    # notes: Best Paper Award
+    # image: ./assets/img/paper/25sigdial-seq2seq-ddp.png
