--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -104,3 +104,4 @@ main:
     conference_short: SIGdial
     conference: Proceedings of the 23rd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<strong>SIGdial</strong>), 2022.
     pdf: https://aclanthology.org/2022.sigdial-1.7/
+    code: https://github.com/chuyuanli/MTL4Depr
