--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -53,7 +53,7 @@ main:
     # page: https://aclanthology.org/2025.acl-long.1253/
     # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     # notes: Oral Presentation
-    image: ./assets/img/paper/25cl4health.png
+    # image: ./assets/img/paper/25cl4health.png
 
   - title: "Multimodal Classification of Alzheimer's Disease by Combining Facial and Eye-tracking Data"
     authors: Shih-Han Chou, Miini Teng, Harshinee Sriram, <strong>Chuyuan Li</strong>, Giuseppe Carenini, Cristina Conati, Thalia S. Field, Hyeju Jang, Gabriel Murray
@@ -64,7 +64,7 @@ main:
     # page: https://aclanthology.org/2025.acl-long.1253/
     # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     # notes: Oral Presentation
-    image: ./assets/img/paper/24ml4h-multimodal-AD.png
+    # image: ./assets/img/paper/24ml4h-multimodal-AD.png
 
   - title: "Dialogue Discourse Parsing as Generation: a Sequence-to-Sequence LLM-based Approach"
     authors: <strong>Chuyuan Li</strong>, Yuwei Yin, and Giuseppe Carenini
