--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
 title: Chuyuan Li
 position: Postdoc Researcher
-affiliation: Department of Computer Science, University of British Columbia
+affiliation: University of British Columbia
 email: chuyuan.li (at) ubc.ca
 
 # Search Engine Optimization (SEO)
