--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ twitter: https://x.com/ChuyuanLi
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
 avatar: ./assets/img/chuyuanli.png
-favicon: ./assets/img/l.png
+favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 
 # Footnote
