Update CV link in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=UTy2DRoAAAAJ&hl=en
-cv_link: assets/files/cv_1212.pdf
+cv_link: assets/files/cv.pdf
 github_link: https://github.com/chuyuanli
 linkedin: https://www.linkedin.com/in/chuyuan-li-nlp/
 twitter: https://x.com/ChuyuanLi
